# estatgojpapi

./: README.md  pyproject.toml
estatgojpapi/: app.py  exceptions.py  models.py  processors.py  settings.py
estatgojpapi/storages/: base.py  exceptions.py  factory.py  local_file.py  memory.py
tests/: conftest.py  fixtures.py  test_app.py  test_init.py  test_models.py  test_processors.py
tests/storages/: test_factory.py  test_local_file.py  test_memory.py
